# preview2-prototyping

./: .gitignore  CODE_OF_CONDUCT.md  COPYRIGHT  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: main.yml
bindings/: Cargo.toml
bindings/src/: lib.rs
byte-array/: Cargo.toml
crates/wasi-preview1-component-adapter/: Cargo.toml
crates/wasi-preview1-component-adapter/byte-array/: Cargo.toml
crates/wasi-preview1-component-adapter/verify/src/: main.rs
host/: Cargo.toml
host/src/: clocks.rs  command.rs  console.rs  default_outgoing_http.rs  exit.rs  filesystem.rs  http.rs  http_types.rs  io.rs  lib.rs  logging.rs  main.rs  network.rs  poll.rs  proxy.rs  random.rs  stderr.rs  tcp.rs
host/src/wasi/: command.rs
host/tests/: command.rs  reactor.rs  runtime.rs  wasi_module.rs
preview2-to-preview1/: Cargo.toml
preview2-to-preview1/src/: lib.rs
src/: descriptors.rs  lib.rs  macros.rs
test-programs/: Cargo.toml  build.rs
test-programs/macros/: Cargo.toml  build.rs
test-programs/reactor-tests/: Cargo.toml
test-programs/reactor-tests/src/: lib.rs
test-programs/reactor-tests/wit/: test-reactor.wit
test-programs/src/: lib.rs
test-programs/tests/: command.rs  reactor.rs  wasi_component.rs  wasi_module.rs
verify/: Cargo.toml
verify/src/: main.rs
wasi/: Cargo.toml
wasi-common/: Cargo.toml
wasi-common/cap-std-sync/: Cargo.toml
wasi-common/cap-std-sync/src/: clocks.rs  dir.rs  file.rs  lib.rs  net.rs  sched.rs  stdio.rs
wasi-common/cap-std-sync/src/sched/: unix.rs
wasi-common/src/: clocks.rs  ctx.rs  file.rs  lib.rs  pipe.rs  sched.rs  stream.rs  table.rs
wasi-common/src/preview1/: mod.rs
wasi-common/src/sched/: subscription.rs
wasi-common/src/wasi/: mod.rs
wasi-common/tokio/src/: file.rs
wasi-sockets/: Cargo.toml
wasi-sockets/src/: ip_name_lookup.rs  lib.rs  network.rs  network_impl.rs  tcp.rs  tcp_socket.rs  udp.rs  wasi.rs
wasi-sockets/sync/: Cargo.toml
wasi-sockets/sync/src/: lib.rs  net.rs
wasi/src/: http.rs  http_client.rs  lib.rs
wasi/wit/: deps.toml
wasmtime-wasi-sockets/: Cargo.toml
wasmtime-wasi-sockets/src/: ip_name_lookup.rs  lib.rs  network.rs  network_impl.rs  tcp.rs  udp.rs  udp_socket.rs  wasi.rs
wasmtime-wasi-sockets/sync/: Cargo.toml
wasmtime-wasi-sockets/sync/src/: lib.rs
wit/: cli.wit  command-extended.wit  command.wit  command.wit.md  little.wit  proxy.wit  reactor.wit  reverse.wit  wasi-clocks.wit  wasi-clocks.wit.md  wasi-command.wit  wasi-default-clocks.wit.md  wasi-default-upstream-http.wit  wasi-environment.wit  wasi-filesystem.wit  wasi-filesystem.wit.md  wasi-http.wit  wasi-logging.wit.md  wasi-poll.wit  wasi-poll.wit.md  wasi-tcp.wit  wasi.wit
