[workspace]
members = [
    "host",
    "test-programs",
    "test-programs/command-tests",
    "test-programs/wasi-tests",
    "test-programs/reactor-tests",
    "wasi-common",
    "wasi-sockets",
    "wasi-sockets/sync",
    "wasi",
]

[workspace.package]
version = "0.0.0"
authors = ["The Wasmtime Project Developers"]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.22"
thiserror = "1.0.15"
tracing = "0.1.26"
cap-std = "1.0.12"
cap-rand = "1.0.12"
cap-fs-ext = "1.0.12"
cap-net-ext = "1.0.12"
fs-set-times = "0.19.0"
cap-time-ext = "1.0.0"
bitflags = "1.2"
windows-sys = "0.48.0"
rustix = "0.37.9"
async-trait = "0.1.59"
io-lifetimes = { version = "1.0.0", default-features = false }
wasi-common = { path = "wasi-common" }
wasmtime-wasi-sockets = { path = "wasi-sockets" }
wasmtime-wasi-sockets-sync = { path = "wasi-sockets/sync" }
once_cell = "1.12.0"
system-interface = { version = "0.25.1", features = ["cap_std_impls"] }
wit-bindgen = { version = "0.9.0", default-features = false }
ipnet = "2" # TODO: Move to cap_std::ipnet instead, when that's released.
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "299131ae2d6655c49138bfab2c4469650763ef3b", features = [
    "component-model",
] }
wiggle = { git = "https://github.com/bytecodealliance/wasmtime", rev = "299131ae2d6655c49138bfab2c4469650763ef3b" }
