[package]
name = "wasi"
version = "0.12.0+wasi-snapshot-preview2"
description = "Experimental WASI Preview2 API bindings for Rust"
edition.workspace = true
publish = false

[dependencies]
wit-bindgen = { workspace = true, features = ["macros", "realloc"] }

# Dependencies for HTTP feature
anyhow = { version = "1.0", optional = true }
http = { version = "0.2", optional = true }

[lib]
crate-type = ["lib"]

[features]
http = ["dep:anyhow", "dep:http"]
