[package]
# name = "wasi"
name = "wasi-preview2-prototype"
version = "0.0.1"
# version = "0.12.0+wasi-snapshot-preview2"
description = "Experimental WASI Preview2 API bindings for Rust"
edition.workspace = true
license = "Apache-2.0 WITH LLVM-exception"

[dependencies]
wit-bindgen = { workspace = true, features = ["macros", "realloc"] }

# Dependencies for HTTP feature
anyhow = { version = "1.0", optional = true }
bytes = { version = "1.4", optional = true }
http = { version = "0.2", optional = true }

[lib]
crate-type = ["lib"]

[features]
default = []
http-client = ["dep:anyhow", "dep:bytes", "dep:http"]
