[package]
name = "wasmtime-wasi-sockets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
cap-std = { workspace = true }
cap-net-ext = { workspace = true }
host = { workspace = true }
rustix = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }
wasi-common = { workspace = true }
