[package]
name = "test-programs-macros"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
quote = "1.0"

[build-dependencies]
# TODO: switch to a release once https://github.com/bytecodealliance/wasm-tools/pull/919 has been merged
wit-component = { git = "https://github.com/dicej/wasm-tools", branch = "lazy-adapter-stack-backport" }
