[package]
name = "wasmtime-wasi-sockets-sync"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wasi-common = { workspace = true }
wasmtime-wasi-sockets = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
cap-std = { workspace = true }
cap-fs-ext = { workspace = true }
cap-net-ext = { workspace = true }
cap-time-ext = "1.0.0"
cap-rand = { workspace = true }
fs-set-times = "0.19.0"
system-interface = { workspace = true }
tracing = { workspace = true }
io-lifetimes = { workspace = true }
is-terminal = "0.4.0"
io-extras = "0.17.1"
ipnet = { workspace = true }
[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["fs"] }

[target.'cfg(windows)'.dependencies]
once_cell = { workspace = true }
rustix = { workspace = true, features = ["net"] }

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = [
    "Win32_Foundation",
]
